src/LandingPage.css
@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Sans&display=swap');

  

  body, html{
    margin: 0;
    padding: 0;
    height: 100%;
    font-family: 'IBM Plex Sans', sans-serif;
    font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Oxygen,Ubuntu,Cantarell,Fira Sans,Droid Sans,Helvetica Neue,sans-serif;
    font-weight: 700;
    font-style: bold;
    letter-spacing: 3px;
    overflow-x: hidden;
    
  }
  
  .landing-page {
    background-image: url('./images/backgroud-large-compress.webp'), url('./images/backgroud-ruido-compress.webp');
    background-size: auto 100%, auto;
    background-position: left center, top left;
    background-repeat: no-repeat, repeat;
    background-color: #191919;
    height: 100vh;
    width: 100%;
    display: flex;
    align-items: center;
    justify-content: flex-start; /* Aligns the content to the right */
    color: white;
    text-align: center;
    padding-left: 41%;
    position: relative;
    flex-direction: row;
  }
  
  .content {
    max-width: 90%;
    padding: 2%;
    font-size: 0.9em;
    border-radius: 10px;
    text-align: left;
    margin-right: 2%; /* Optional: adds space from the right edge */

    
}

.footer {
    width: 100%;
    display: flex;
    justify-content: center;
    flex-direction: row;
    gap: 20px; /* Space between links */
    
    padding-top: 10%;

  }
  
  .footer a {
    color: #3fea4b;
    text-decoration: none;
    font-size: 0.9em;
    
  }
  
  .footer a:hover {
    text-decoration: underline;
  }
  
  .event {
    margin: 15px 0;
  }
  
  a {
    color: #3fea4b;
    text-decoration: none;
  }
  
  a:hover {
    cursor: unset;
    text-decoration: underline;
  }
/* if screen size is not long enough vertically, resize content */


  /* Media Query for Mobile Version */
/* @media (max-width: 768px) {
    .landing-page {
      flex-direction: column;
      align-items: center;
      padding: 0;
      justify-content: center;
      text-align: center;
    }
  
    .content {
      max-width: 90%;
      margin: 0 20px;
    }
} */

/* style for desktop vertical view */
@media (max-width: 1585px) {

}

/* mobile view style */
@media (max-width: 768px) {
    body, html {
        margin: 0;
        padding: 0;
        height: 100%;
        
        font-family: 'IBM Plex Sans', sans-serif;
        font-weight: 700;
        
        font-style: bold;
        letter-spacing: 2px;
        overflow-x: hidden;
      }

    .landing-page {
      flex-direction: column;
      align-items: flex-start;
      padding-left: 0;
      justify-content: flex-start;
      height: auto; /* Let the height be determined by content */
      text-align: left;
    }
  
    .background-section {
      /* position: absolute; */

      width: 100%;
      height: 100vh;
      max-width: 100vh;
      /* min-height: 100vh; */
      background-image: url('./images/backgroud-mobile-compress.webp'), url('./images/backgroud-ruido-compress.webp');
      background-size: contain, auto; /* Cover for the first image, auto for the second */
      background-position: top center, center;
      background-repeat: no-repeat; /* No-repeat for the first, repeat-y for the second */
      /* background-attachment: local; Ensures that the background image scrolls with the content */
      /* animation: colorChange 2s infinite alternate; */
    }

    .content {
      /* position: relative; */
      line-height: 150%;
      width: 100%;
      max-width: none; /* Remove max-width */
      margin: 0; /* Remove margin */
      padding: 20px;
      margin-top: 61vh;
      box-sizing: border-box;
      background-image: url('./images/backgroud-ruido-compress.webp');
      font-size: 0.55em;
      white-space: nowrap; /* Prevent text from wrapping to the next line */
      /* overflow: hidden; Hide overflow content */
      text-overflow: ellipsis; 
      border-radius: 0;
      position: center;
    }

    .footer {
        width: 100%;
        display: flex;
        justify-content: center;
        /* flex-direction: column; */
        flex: 1 1 45%;
        flex-wrap: wrap;
        gap: 2%; /* Space between links */
        padding-top: 10%;
        text-align: center;
        color: white;
      }

  }




  /* ----------------------------mouse animation keyframes----------------------- */
  @-webkit-keyframes cursorAnimation {
    0% { cursor: url('./images/frame_00_delay-0.1s.gif'), auto; }
    10% { cursor: url('./images/frame_01_delay-0.1s.gif'), auto; }
    20% { cursor: url('./images/frame_02_delay-0.1s.gif'), auto; }
    30% { cursor: url('./images/frame_03_delay-0.1s.gif'), auto; }
    40% { cursor: url('./images/frame_04_delay-0.1s.gif'), auto; }
    50% { cursor: url('./images/frame_05_delay-0.1s.gif'), auto; }
    60% { cursor: url('./images/frame_06_delay-0.1s.gif'), auto; }
    70% { cursor: url('./images/frame_07_delay-0.1s.gif'), auto; }
    80% { cursor: url('./images/frame_08_delay-0.1s.gif'), auto; }
    90% { cursor: url('./images/frame_09_delay-0.1s.gif'), auto; }
    100% { cursor: url('./images/frame_00_delay-0.1s.gif'), auto; }
  }
  
  @keyframes cursorAnimation {
    0% { cursor: url('./images/frame_00_delay-0.1s.gif'), auto; }
    10% { cursor: url('./images/frame_01_delay-0.1s.gif'), auto; }
    20% { cursor: url('./images/frame_02_delay-0.1s.gif'), auto; }
    30% { cursor: url('./images/frame_03_delay-0.1s.gif'), auto; }
    40% { cursor: url('./images/frame_04_delay-0.1s.gif'), auto; }
    50% { cursor: url('./images/frame_05_delay-0.1s.gif'), auto; }
    60% { cursor: url('./images/frame_06_delay-0.1s.gif'), auto; }
    70% { cursor: url('./images/frame_07_delay-0.1s.gif'), auto; }
    80% { cursor: url('./images/frame_08_delay-0.1s.gif'), auto; }
    90% { cursor: url('./images/frame_09_delay-0.1s.gif'), auto; }
    100% { cursor: url('./images/frame_00_delay-0.1s.gif'), auto; }
  }
  
  .animated-cursor {
    -webkit-animation: cursorAnimation 1s steps(10) infinite;
    animation: cursorAnimation 1s steps(10) infinite;
  }
    /* ----------------------------mouse animation keyframes----------------------- */  
  

